--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 # One Month Rails
 
 This is the sample application for
-[One Month Rails: Teach Yourself to Code*][http://onemonthrails.com]
+[*One Month Rails: Teach Yourself to Code*](http://onemonthrails.com)
 
-by [Sergio Raya][http://sergnotes.com]
+by [Sergio Raya](http://sergnotes.com)
